tests/pass/Comments.java
/* Copyright 2013 Bill Campbell, Swami Iyer and Bahar Akbal-Delibas */


/*

    A bunch of junk

 */

package pass;

import java.lang.System;

public class Comments {

    /*
    public static String message() {
        return "Hello, World!";
    }
    */

    /**/

    /* **/
    /***/
    /* ***/ //This one lost me points :(

    public static void main(String[] args) {
        System.out.println(Comments.message());
    }

    public static String message() {
        return "Hello World!";
    }
}